--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <div class="timer">
-      <p class="counter">45</p>
-      <button class="btnStart">Start</button>
+      <button class="btnUp">Up</button>
+      <p class="counter"></p>
+      <button class="btnDown">Down</button>
     </div>
+
+    <button class="btnStart">Start</button>
 
     <script type="module" src="./js/app.js" charset="uft-8"></script>
   </body>
