add and sub function added to increase and decrease the timer

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <div class="timer">
-      <button class="btnUp">Up</button>
       <p class="counter"></p>
+    </div>
+    <div class="buttons">
+      <button class="btnUp">Up</button>
+      <button class="btnStart">Start</button>
       <button class="btnDown">Down</button>
     </div>
-
-    <button class="btnStart">Start</button>
 
     <script type="module" src="./js/app.js" charset="uft-8"></script>
   </body>
