ref: adds predefined timer; saves time set by user

--- a/public/index.html
+++ b/public/index.html
@@ -18,35 +18,12 @@
       <button class="btnUp">Up</button>
     </div>
 
-    <!-- <label for="xone">Set Timer</label>
-    <select id="lunch" name="lunch">
-      <option value="45">45</option>
-      <option value="60">60</option>
-      <option value="90">90</option>
-      <option value="30">30</option>
-    </select>
-
-    <input type="button" class="disabled" id="btnTest" value="Click ME" /> -->
+    <div class="buttons">
+      <button class="btn res45">45</button>
+      <button class="btn res60">60</button>
+      <button class="btn res90">90</button>
+    </div>
 
     <script type="module" src="./js/app.js" charset="uft-8"></script>
   </body>
 </html>
-
-<!-- <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Remove HTML</title>
-  </head>
-  <body>
-    <form>
-      <input
-        type="button"
-        value="click here to clear"
-        onclick="document.getElementById('inputText').value = '' "
-      />
-      <input type="text" value="Tutorix" id="inputText" />
-    </form>
-  </body>
-</html> -->
