changes node version from 16 to 19

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       <button class="btn res90">90</button>
     </div>
 
+    <div class="alert"></div>
+
     <script type="module" src="./js/app.js" charset="uft-8"></script>
   </body>
 </html>
